优化部分代码